# eerful

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: spec.md  threat-model.md
examples/: smoke_testnet.py
examples/trading/: .gitignore  README.md  agent.py  principal_policy.json
examples/trading/axl/: README.md  _forge.py  agent_multi.py  explorer.py  forge_attempt.py  refiner.py  toy_backtest.py  transport.py
examples/trading/axl/cached_run/: poisoned_implementation_receipt.json  poisoned_proposal_receipt.json
examples/trading/bundles/: implementation_grade.json  proposal_grade.json
examples/trading/tool_responses/: clean.json  poisoned.json
examples/trading_critic/: README.md  author_strategies.py  bundle.json  bundle_inspect.py  demo.py  verify_chain.py
examples/trading_critic/strategies/: v1.md
scripts/: calibrate_proposal_grade.py  run_demo.sh
services/demo_ui/: server.py
services/demo_ui/static/: app.js  index.html  styles.css
services/zg-bridge/: README.md  package-lock.json  package.json  server.ts
src/eerful/: __init__.py  _emit.py  canonical.py  cli.py  commitment.py  errors.py  evaluator.py  executor.py  policy.py  receipt.py  verify.py
src/eerful/jig/: __init__.py  client.py  grader.py  tracer.py
src/eerful/zg/: __init__.py  attestation.py  bridge_init.py  compute.py  storage.py
tests/: test_attestation.py  test_bridge_init.py  test_canonical.py  test_cli.py  test_commitment.py  test_evaluator.py  test_examples_trading.py  test_examples_trading_critic.py  test_executor.py  test_policy.py  test_receipt.py  test_verify.py  test_zg_compute.py  test_zg_storage.py
tests/jig/: conftest.py  test_evaluation_client.py  test_evaluation_grader.py  test_pipeline_integration.py  test_tracer.py
