[project]
name = "eerful"
version = "0.1.0"
description = "Enhanced Evaluation Receipts — reference implementation of the EER protocol"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.0",
    "jsonschema>=4.18",
    "httpx>=0.27",
    "jig[anthropic]",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-jsonschema>=4.18",
]

[project.scripts]
eerful = "eerful.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eerful"]

[tool.uv.sources]
jig = { git = "https://github.com/rankonelabs/jig.git" }

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
