[project]
name = "eerful"
version = "0.1.0"
description = "Enhanced Evaluation Receipts — reference implementation of the EER protocol"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.0",
    "jsonschema>=4.18",
    "httpx>=0.27",
    "jig[anthropic]",
    "eth-keys>=0.5",
    "eth-utils>=4.0",
    "eth-hash[pycryptodome]>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-jsonschema>=4.18",
]

[project.scripts]
eerful = "eerful.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eerful"]

[tool.uv.sources]
jig = { git = "https://github.com/rankonelabs/jig.git" }

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
# Relax fully-typed-signature enforcement on test functions while still
# type-checking their bodies; helpers (e.g. `_bundle(**overrides: Any)`) must
# still be annotated since check_untyped_defs runs over them.
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
# eth-keys / eth-utils ship type stubs but don't follow explicit re-export
# convention; their public surface is stable and well-documented.
module = ["eth_keys", "eth_keys.*", "eth_utils", "eth_utils.*"]
implicit_reexport = true

[[tool.mypy.overrides]]
# jig is fully typed in source but ships without a `py.typed` marker as of
# this writing. `follow_untyped_imports` tells mypy to read jig's actual
# source rather than treating it as Any — necessary so we can subclass
# `LLMClient` / `LLMResponse` (subclassing Any raises `Class cannot
# subclass "..." (has type "Any")`). Once jig publishes a typed release we
# can drop this override and the import resolves directly.
module = ["jig", "jig.*"]
follow_untyped_imports = true

[[tool.mypy.overrides]]
# `examples/trading_critic/demo.py` is a script, not a packaged module.
# `tests/test_examples_trading_critic.py` imports it via a `sys.path`
# insert at module load time. mypy's static analysis can't follow that
# runtime path mutation; this override tells it to treat the dynamic
# `demo` import as `Any` rather than fail to resolve. The test still
# runs `from demo import run_demo` at runtime against the real file.
module = ["demo"]
ignore_missing_imports = true
